UI issue to align Add button to right always is resolved

--- a/app/styles/components/class/overview/_gru-accordion-lesson.scss
+++ b/app/styles/components/class/overview/_gru-accordion-lesson.scss
@@ -337,7 +337,7 @@
           border-right: solid 2px $light-200;
           min-height: 55px;
           .go-live{
-            margin-top:10px;
+            margin-top:2px;
           }
           .add-to {
             color: $gray;
